# watchsignal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ASSET_NOTICE.md  CONTEXT.md  Dockerfile.demo  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: app.py  pyproject.toml  vercel.json
apps/api/src/movie_night_mediator/: __init__.py  env.py
apps/api/tests/: test_ablation_experiment.py  test_api_contract_export.py  test_api_health.py  test_app_owned_movie_actions.py  test_app_owned_movie_actions_api.py  test_backend_service_auth.py  test_backfill_api.py  test_benchmark_protocol.py  test_candidate_enrichment.py  test_candidate_generation_adapter.py  test_chronological_tracer.py  test_cohort_baselines.py  test_collaborative.py  test_collaborative_search_experiment.py  test_content_features.py  test_database_compatibility.py  test_debug_history.py  test_debug_history_api.py  test_demo_couple_fixture.py  test_development_protocol.py  test_env_loading.py  test_feedback.py  test_feedback_api.py  test_heuristic_scorer.py  test_history_api.py  test_household_model_comparison.py  test_hybrid.py  test_internal_winner_experiment.py  test_learned_taste_integration.py  test_manual_backfill.py  test_migration_tool.py  test_movielens_census.py  test_mvp_plus_2_contracts.py  test_mvp_plus_2_evaluation.py  test_mvp_plus_3_contracts.py  test_mvp_plus_4_evaluation.py  test_mvp_plus_5_evaluation.py  test_onboarding.py  test_onboarding_api.py  test_openai_tonight_intent.py  (+35 more)
apps/api/tests/fixtures/taste_lab/: links.csv  (+2 more)
(+368 files in other folders)
